--- a/knife/src/app/index.html
+++ b/knife/src/app/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Super</title>
-    <script src="dist/app.js"></script>
+    <script src="app.min.js"></script>
 
 </head>
 <body ng-app ="knife">
