--- a/ct/knife/src/app/public/index.html
+++ b/ct/knife/src/app/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Super</title>
     <script src="app.min.js"></script>
+    <script src="templates.js"></script>
 
 </head>
 <body ng-app ="knife">
